--- a/manifest.json
+++ b/manifest.json
@@ -10,49 +10,49 @@
     "scope": "./",
     "icons": [
         {
-            "src": "icons/icon-circle-72.png",
+            "src": "icons/bms-logo-72.png",
             "sizes": "72x72",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-96.png",
+            "src": "icons/bms-logo-96.png",
             "sizes": "96x96",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-128.png",
+            "src": "icons/bms-logo-128.png",
             "sizes": "128x128",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-144.png",
+            "src": "icons/bms-logo-144.png",
             "sizes": "144x144",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-152.png",
+            "src": "icons/bms-logo-152.png",
             "sizes": "152x152",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-192.png",
+            "src": "icons/bms-logo-192.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-384.png",
+            "src": "icons/bms-logo-384.png",
             "sizes": "384x384",
             "type": "image/png",
             "purpose": "any maskable"
         },
         {
-            "src": "icons/icon-circle-512.png",
+            "src": "icons/bms-logo-512.png",
             "sizes": "512x512",
             "type": "image/png",
             "purpose": "any maskable"
